fix desktop layout bug 'cards misplaced'.

--- a/src/assets/css/librarybrowser.scss
+++ b/src/assets/css/librarybrowser.scss
@@ -735,7 +735,7 @@
 
     .layout-desktop & {
         left: 3.3%;
-        top: -80%;
+        top: 10%;
         width: 25vw;
     }
 
